<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.execom.ljmocic.pushnotifications.MainActivity">

    <TextView
        android:text="@string/ui_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/notification_message"
        android:text="@string/lorem_ipsum"
        android:hint="@string/lorem_ipsum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/ui_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/notification_subject"
        android:text="@string/lorem_ipsum"
        android:hint="@string/lorem_ipsum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/send_notification"
        android:text="@string/ui_send_notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/checkbox_first_receiver"
        android:text="@string/text_first_recipient"
        android:layout_gravity="start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/checkbox_second_receiver"
        android:text="@string/text_second_recipient"
        android:layout_gravity="start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
